force-app/main/default/objects/Overdue_Vehicles__c/Overdue_Vehicles__c.object-meta.xml
<CustomObject>
    <label>Overdue Vehicles</label>
    <nameField>
        <label>Overdue Vehicles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Overdue Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>