force-app/main/default/objects/Overdue_Vehicles__c/fields/Drop_Off_Branch__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Branch__c</fullName>
    <label>Drop Off Branch</label>
    <length>64</length>
    <type>Text</type>
</CustomField>