force-app/main/default/objects/Overdue_Vehicles__c/fields/Drop_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Time__c</fullName>
    <label>Drop Off Time</label>
    <type>Time</type>
</CustomField>