force-app/main/default/objects/Overdue_Vehicles__c/fields/Rental_Days__c.field-meta.xml
<CustomField>
    <fullName>Rental_Days__c</fullName>
    <label>Rental Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>