force-app/main/default/objects/Overdue_Vehicles__c/fields/Vehicle_ACRISS__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ACRISS__c</fullName>
    <label>Vehicle ACRISS</label>
    <length>64</length>
    <type>Text</type>
</CustomField>