force-app/main/default/objects/Overdue_Vehicles__c/fields/Vehicle_Group_TNAM__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Group_TNAM__c</fullName>
    <label>Vehicle Group (TNAM)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>